# ska-restapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: gen_certs.sh  install_misc.sh  install_skarnet.sh  install_staging_target.sh  run_insecure.sh  run_secure.sh
scripts/configs/: aquaplouf.ssl.config
src/: CMakeLists.txt
src/http_simple/: CMakeLists.txt  main.c  respond.c  respond.h  route.c
